--- a/subsites/trial.html
+++ b/subsites/trial.html
@@ -11,14 +11,14 @@
     <title>Multi Algorithm Switching Graphical User Interface - MASGUI </title>
 
     <!-- Bootstrap core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom fonts for this template -->
     <link href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="css/one-page-wonder.min.css" rel="stylesheet">
+    <link href="../css/one-page-wonder.min.css" rel="stylesheet">
 
   </head>
 
@@ -34,10 +34,10 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="/subsites/buy.html">Buy</a>
+              <a class="nav-link" href="#">Buy</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/subsites/trial.html">Download Trial</a>
+              <a class="nav-link" href="#">Download Trial</a>
             </li>
           </ul>
         </div>
@@ -47,7 +47,7 @@
     <header class="masthead text-center text-white">
       <div class="masthead-content">
         <div class="container">
-          <h1 class="masthead-heading mb-0">One Page Wonder</h1>
+          <h1 class="masthead-heading mb-0">TRIAL</h1>
           <h2 class="masthead-subheading mb-0">Will Rock Your Socks Off</h2>
           <a href="#" class="btn btn-primary btn-xl rounded-pill mt-5">Learn More</a>
         </div>
@@ -121,8 +121,8 @@
     </footer>
 
     <!-- Bootstrap core JavaScript -->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="../vendor/jquery/jquery.min.js"></script>
+    <script src="../vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
   </body>
 
