--- a/subsites/trial.html
+++ b/subsites/trial.html
@@ -27,17 +27,14 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="#">MASGUI</a>
+        <a class="navbar-brand" href="../index.html">MASGUI</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="#">Buy</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Download Trial</a>
+              <a class="nav-link" href="buy.html">Buy</a>
             </li>
           </ul>
         </div>
